src/App.css
/* http://meyerweb.com/eric/tools/css/reset/ 
   v2.0 | 20110126
   License: none (public domain)
*/

html,
body,
div,
span,
applet,
object,
iframe,
h1,
h2,
h3,
h4,
h5,
h6,
p,
blockquote,
pre,
a,
abbr,
acronym,
address,
big,
cite,
code,
del,
dfn,
em,
img,
ins,
kbd,
q,
s,
samp,
small,
strike,
strong,
sub,
sup,
tt,
var,
b,
u,
i,
center,
dl,
dt,
dd,
ol,
ul,
li,
fieldset,
form,
label,
legend,
table,
caption,
tbody,
tfoot,
thead,
tr,
th,
td,
article,
aside,
canvas,
details,
embed,
figure,
figcaption,
footer,
header,
hgroup,
menu,
nav,
output,
ruby,
section,
summary,
time,
mark,
audio,
video {
  margin: 0;
  padding: 0;
  border: 0;
  font-size: 100%;
  font: inherit;
  vertical-align: baseline;
}
/* HTML5 display-role reset for older browsers */
article,
aside,
details,
figcaption,
figure,
footer,
header,
hgroup,
menu,
nav,
section {
  display: block;
}
body {
  line-height: 1;
}
ol,
ul {
  list-style: none;
}
blockquote,
q {
  quotes: none;
}
blockquote:before,
blockquote:after,
q:before,
q:after {
  content: "";
  content: none;
}
table {
  border-collapse: collapse;
  border-spacing: 0;
}

/* -- post css reset -- */

.App {
  text-align: center;
  background-color: #fafafa;
}

.App-logo {
  animation: App-logo-spin infinite 20s linear;
  height: 40vmin;
  pointer-events: none;
}

.AppHead {
  display: flex;
  flex-direction: row;
  background-color: #1a1e23;
  height: 100px;
  color: white;
  justify-content: space-between;
  align-items: center;
}

.header1 {
  display: flex;
  align-content: center;
  border: 15px;
  margin-left: 25px;
  font-size: 1.5rem;
}

.header2 {
  display: flex;
  align-content: center;
  border: 25px;
  margin-right: 45px;
  font-size: 1.5rem;
}

.home1 {
  display: flex;
  flex-direction: row;

  background-color: #fafafa;
  height: 100px;
  border: 1px solid red;
  color: black;
  justify-content: space-between;
  align-items: center;
  margin: 20px;
}

.home1a {
  display: flex;
  flex-direction: row;
  /* width: 1200px; */
  background-color: #fafafa;
  height: 450px;
  border: 1px solid red;
  color: black;
  justify-content: space-around;
  align-items: center;
  margin: 20px;
}

.homeleft {
  font-size: 2.5rem;
  width: 40%;
}

.homesub {
  font-size: 1.3rem;
  width: 40%;
  justify-content: flex-start;
  align-items: flex-start;
}

/* .homesub p {
  border: 12px;
  margin: 12px;
} */

.textbig {
  font-size: 3.5rem;
  margin-left: 20px;
}

.home1b {
  display: flex;
  flex-direction: row;
  /* width: 1200px; */
  background-color: #fafafa;
  height: 800px;
  border: 1px solid red;
  color: black;
  justify-content: space-around;
  align-items: center;
  margin: 20px;
}

.home1b h1 {
  margin: 10px;
  font-size: 3rem;
}

.home1c {
  display: flex;
  flex-direction: column;
  /* width: 1200px; */
  background-color: #fafafa;
  height: 350px;
  border: 1px solid red;
  color: black;
  justify-content: space-around;
  align-items: center;
  margin: 20px;
}

.home1c h1 {
  margin: 10px;
  font-size: 3rem;
}

.home1c p {
  margin: 10px;
  font-size: 1.2rem;
}

.flexcontainer {
  display: flex;
  flex-direction: row;
}

.App-header {
  background-color: white;
  min-height: 100vh;
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
  font-size: calc(10px + 2vmin);
  color: black;
}

.App-link {
  color: #61dafb;
}

@keyframes App-logo-spin {
  from {
    transform: rotate(0deg);
  }
  to {
    transform: rotate(360deg);
  }
}

.header-title a {
  text-decoration: none;
  color: white;
}

/* * * * * * * * * * * * * * * * * * */
/* * * * PROFILE PAGE SECTION  * * * */
/* * * * * * * * * * * * * * * * * * */

.profile-page-container {
  display: flex;
  min-height: 900px;
}

.profile-page-container h2 {
  font-size: 250%;
}

.resources {
  background-color: lightslategray;
  width: 15%;
  padding: 5% 0%;
}

.resources-list {
  display: flex;
  flex-direction: column;
  justify-content: center;
}

.folders-projects {
  display: flex;
  width: 90%;
  padding: 5% 0%;
}

.folders-section {
  padding: 0% 3%;
  width: 35%;
}

.folders-section h2 {
  text-align: left;
}

.folders-list {
  display: flex;
  flex-direction: row;
  flex-wrap: wrap;
  justify-content: space-between;
}

.folder {
  width: 150px;
  height: 160px;
  border: 1px solid black;
  margin-top: 2em;
}

.projects-section {
  padding: 0% 3%;
  width: 65%;
  border-left: 2px solid darkslategray;
}

.footer {
  display: flex;
  flex-direction: row;
  background-color: #1a1e23;
  height: 100px;
  color: white;
  justify-content: space-between;
  align-items: center;
  padding: 0% 10%;
}

.copyright {
  display: inline-block;
}

.copyright p {
  display: inline-block;
  font-size: 130%;
}

.red-text {
  font-size: 130%;
  color: red;
}

.footer a {
  color: white;
  text-decoration: none;
  font-size: 130%;
}

.red-text a:visited {
  text-decoration-color: white;
  text-decoration: none;
}

.footer img {
  max-width: 25px;
}

.projects-section h2 {
  text-align: left;
}

.projects-list {
  display: flex;
  flex-direction: row;
  flex-wrap: wrap;
  justify-content: space-between;
}

.project {
  width: 150px;
  height: 160px;
  border: 1px solid black;
  margin-top: 2em;
}

/* * * * * * * * * * * * * * * * * * */
/* * * * CONTACT FORM SECTION  * * * */
/* * * * * * * * * * * * * * * * * * */

.contact-form-container {
  display: flex;
  justify-content: center;
  padding: 5% 0%;
  border: 1px solid red;
}

/* * * * * * * * * * * * * * * * * * */
/* * * * NAVBAR LINKS SECTION  * * * */
/* * * * * * * * * * * * * * * * * * */

.navbar-links {
  display: flex;
  justify-content: space-between;
  width: 350px;
}

